--- a/src/Resources/assets/package.json
+++ b/src/Resources/assets/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WordpressAutoloader",
+  "name": "wordpress_autoloader",
   "private": true,
   "version": "0.1.0",
   "description": "Wordpress autoloader theme",
@@ -7,9 +7,6 @@
     "autoprefixer": "^6.5.3",
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
-    "eslint": "^3.7.0",
-    "eslint-config-es2015": "^1.1.0",
-    "eslint-config-google": "^0.6.0",
     "grunt": "~1.0.0",
     "grunt-browserify": "^5.0.0",
     "grunt-combine-media-queries": "^1.0.20",
@@ -18,14 +15,10 @@
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-eslint": "^19.0.0",
     "grunt-po2mo": "^0.1.2",
     "grunt-postcss": "^0.8.0",
     "grunt-sass": "^1.2.1",
     "grunt-scss-lint": "^0.5.0",
-    "grunt-svgstore": "^1.0.0",
-    "imagemin-mozjpeg": "5.1.0",
-    "imagemin-pngquant": "^4.1.0",
     "load-grunt-configs": "^1.0.0",
     "load-grunt-tasks": "^3.5.2"
   },
