--- a/src/Resources/assets/package.json
+++ b/src/Resources/assets/package.json
@@ -1,26 +1,26 @@
 {
   "name": "wordpress_autoloader",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Wordpress autoloader theme",
   "devDependencies": {
-    "autoprefixer": "^6.5.3",
-    "babel-preset-es2015": "^6.18.0",
-    "babelify": "^7.3.0",
-    "grunt": "~1.0.0",
-    "grunt-browserify": "^5.0.0",
-    "grunt-combine-media-queries": "^1.0.20",
-    "grunt-contrib-clean": "^1.0.0",
+    "@babel/core": "^7.1.5",
+    "autoprefixer": "^9.3.1",
+    "babel-preset-env": "^1.7.0",
+    "babelify": "^10.0.0",
+    "grunt": "~1.0.3",
+    "grunt-browserify": "^5.3.0",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-imagemin": "^1.0.1",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-imagemin": "^3.1.0",
+    "grunt-contrib-uglify": "^4.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-po2mo": "^0.1.2",
-    "grunt-postcss": "^0.8.0",
-    "grunt-sass": "^1.2.1",
-    "grunt-scss-lint": "^0.5.0",
+    "grunt-postcss": "^0.9.0",
+    "grunt-sass": "^3.0.2",
     "load-grunt-configs": "^1.0.0",
-    "load-grunt-tasks": "^3.5.2"
+    "load-grunt-tasks": "^4.0.0",
+    "node-sass": "^4.10.0"
   },
   "scripts": {},
   "repository": {
