--- a/src/Resources/assets/package.json
+++ b/src/Resources/assets/package.json
@@ -4,22 +4,25 @@
   "version": "0.2.0",
   "description": "Wordpress autoloader theme",
   "devDependencies": {
-    "@babel/core": "^7.1.5",
     "autoprefixer": "^9.3.1",
-    "babel-preset-env": "^1.7.0",
-    "babelify": "^10.0.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^8.0.0",
     "grunt": "~1.0.3",
     "grunt-browserify": "^5.3.0",
     "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-uglify": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-po2mo": "^0.1.2",
     "grunt-postcss": "^0.9.0",
     "grunt-sass": "^3.0.2",
+    "grunt-ts": "^6.0.0-beta.21",
     "load-grunt-configs": "^1.0.0",
     "load-grunt-tasks": "^4.0.0",
-    "node-sass": "^4.10.0"
+    "node-sass": "^4.10.0",
+    "typescript": "^3.1.3"
   },
   "scripts": {},
   "repository": {
@@ -28,5 +31,7 @@
   },
   "author": "halaz.lazlo@gmail.com",
   "license": "",
-  "dependencies": {}
+  "dependencies": {
+    "sortablejs": "^1.7.0"
+  }
 }
